force-app/main/default/objects/Accounting_Process__c/fields/Existing_Books__c.field-meta.xml
<CustomField>
    <fullName>Existing_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Books</label>
    <type>Checkbox</type>
</CustomField>