force-app/main/default/objects/Accounting_Process__c/fields/Extension_E_filed__c.field-meta.xml
<CustomField>
    <fullName>Extension_E_filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension E-filed</label>
    <type>Checkbox</type>
</CustomField>