force-app/main/default/objects/Accounting_Process__c/fields/Extension_Filed__c.field-meta.xml
<CustomField>
    <fullName>Extension_Filed__c</fullName>
    <label>Extension Filed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>