force-app/main/default/objects/Accounting_Process__c/fields/Extension_in_Client_Books_Admin_app__c.field-meta.xml
<CustomField>
    <fullName>Extension_in_Client_Books_Admin_app__c</fullName>
    <description>use this link to find Extension via Client Books Admin app</description>
    <label>Extension in Client Books Admin app</label>
    <type>Url</type>
</CustomField>