force-app/main/default/objects/Accounting_Process__c/fields/Extension_prepared__c.field-meta.xml
<CustomField>
    <fullName>Extension_prepared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Paper-Filed</label>
    <type>Checkbox</type>
</CustomField>