force-app/main/default/objects/Accounting_Process__c/fields/Extension_Status__c.field-meta.xml
<CustomField>
    <fullName>Extension_Status__c</fullName>
    <label>Extension Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extension Info Unfinished</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <label>Extension Info Received</label>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Internal Completed - Govt forms unavailable</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>