force-app/main/default/objects/Accounting_Process__c/fields/Extension_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Submit_Date__c</fullName>
    <description>Extension Submit date and time</description>
    <label>Extension Submit Date</label>
    <type>DateTime</type>
</CustomField>