force-app/main/default/objects/Accounting_Process__c/fields/Federal_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Federal_Notice_Type__c</fullName>
    <label>Federal Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Notice_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late Filing</fullName>
            </value>
            <value>
                <fullName>CP2000</fullName>
            </value>
            <value>
                <fullName>CP504</fullName>
            </value>
            <value>
                <fullName>Transcript Request</fullName>
            </value>
            <value>
                <fullName>2553 Letter</fullName>
            </value>
            <value>
                <fullName>1095 HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>