force-app/main/default/objects/Accounting_Process__c/fields/Filing_Method__c.field-meta.xml
<CustomField>
    <fullName>Filing_Method__c</fullName>
    <label>Filing Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Govt Filing - Federal</fullName>
            </value>
            <value>
                <fullName>Govt Filing - State</fullName>
            </value>
            <value>
                <fullName>City / County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>