force-app/main/default/objects/Accounting_Process__c/fields/Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Date__c</fullName>
    <formula>Account__r.Incorporation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>