force-app/main/default/objects/Accounting_Process__c/fields/Initial_Bookkeeping_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Bookkeeping_Status__c</fullName>
    <label>Initial Bookkeeping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Initial Consultation Scheduled</fullName>
            </value>
            <value>
                <fullName>Initial Consultation No Show</fullName>
            </value>
            <value>
                <fullName>Initial Consultation Completed</fullName>
            </value>
            <value>
                <fullName>Bookkeeper Assigned</fullName>
                <isActive>false</isActive>
                <label>Bookkeeper Assigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>