force-app/main/default/objects/Accounting_Process__c/fields/Intern__c.field-meta.xml
<CustomField>
    <fullName>Intern__c</fullName>
    <label>Intern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>