force-app/main/default/objects/Accounting_Process__c/fields/Interns__c.field-meta.xml
<CustomField>
    <fullName>Interns__c</fullName>
    <label>Interns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ari Shala</fullName>
            </value>
            <value>
                <fullName>Brandon Pilaza</fullName>
            </value>
            <value>
                <fullName>Endrit Kukaj</fullName>
            </value>
            <value>
                <fullName>Eric Schaeffer</fullName>
            </value>
            <value>
                <fullName>Garrett Palmeri</fullName>
            </value>
            <value>
                <fullName>Haifeng (Kevin) Hu</fullName>
            </value>
            <value>
                <fullName>Jared Gray</fullName>
            </value>
            <value>
                <fullName>Jenny Choi</fullName>
            </value>
            <value>
                <fullName>Jialing Cai</fullName>
            </value>
            <value>
                <fullName>Jonathan Morales</fullName>
            </value>
            <value>
                <fullName>Jonathan Toolsee</fullName>
            </value>
            <value>
                <fullName>Kevin Sheskier</fullName>
            </value>
            <value>
                <fullName>Lamin Camara</fullName>
            </value>
            <value>
                <fullName>Maria Klimenko</fullName>
            </value>
            <value>
                <fullName>Mariem Tolba</fullName>
            </value>
            <value>
                <fullName>Nicole Kovalcik</fullName>
            </value>
            <value>
                <fullName>Richard Legnini</fullName>
            </value>
            <value>
                <fullName>Samantha Pinkett</fullName>
            </value>
            <value>
                <fullName>Shravan Khanna</fullName>
            </value>
            <value>
                <fullName>Tigran Vardanyan</fullName>
            </value>
            <value>
                <fullName>Tyler Sebastianelli</fullName>
            </value>
            <value>
                <fullName>Yao (Emily) Feng</fullName>
            </value>
            <value>
                <fullName>Yixi He</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>