force-app/main/default/objects/Accounting_Process__c/fields/Intervals__c.field-meta.xml
<CustomField>
    <fullName>Intervals__c</fullName>
    <label>Intervals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>