force-app/main/default/objects/Accounting_Process__c/fields/l_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>l_Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tax - 1023/1024 NonProfit</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q1</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q2</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q3</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q4</fullName>
            </value>
            <value>
                <fullName>Tax - 1040 Individual</fullName>
            </value>
            <value>
                <fullName>Tax - 1041/706/709/Payroll</fullName>
            </value>
            <value>
                <fullName>Tax - 1065 Partnership</fullName>
            </value>
            <value>
                <fullName>Tax - 1120 Corporation</fullName>
            </value>
            <value>
                <fullName>Tax - 1120 S Corporation</fullName>
            </value>
            <value>
                <fullName>Tax - 990 Tax Exempt</fullName>
            </value>
            <value>
                <fullName>Tax - Amended Individual</fullName>
            </value>
            <value>
                <fullName>Tax - Amended Business</fullName>
            </value>
            <value>
                <fullName>Tax - Business TBD</fullName>
            </value>
            <value>
                <fullName>Tax - Schedule C Only</fullName>
            </value>
            <value>
                <fullName>Tax - Individual 1040NR</fullName>
            </value>
            <value>
                <fullName>Tax - Business Return</fullName>
            </value>
            <value>
                <fullName>Tax - Personal Return</fullName>
            </value>
            <value>
                <fullName>Tax - 1099 Prep</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Extension - Business Return</fullName>
            </value>
            <value>
                <fullName>Extension - Personal Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>