force-app/main/default/objects/Accounting_Process__c/fields/Last_Changed_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_by_Date__c</fullName>
    <label>Last Changed by Date</label>
    <type>Date</type>
</CustomField>