force-app/main/default/objects/Accounting_Process__c/fields/Last_Changed_by_Date_Tax_Prep__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_by_Date_Tax_Prep__c</fullName>
    <label>Last Changed by Date (Tax Prep)</label>
    <type>Date</type>
</CustomField>