force-app/main/default/objects/Accounting_Process__c/fields/Last_Changed_by_est_tax__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_by_est_tax__c</fullName>
    <label>Last Changed by (est tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>