force-app/main/default/objects/Accounting_Process__c/fields/Last_Changed_by_tax_prep__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_by_tax_prep__c</fullName>
    <label>Last Changed by (tax prep)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>