force-app/main/default/objects/Accounting_Process__c/fields/Last_Contact_Date_w_Client__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_w_Client__c</fullName>
    <label>Last Contact Date w/ Client</label>
    <type>DateTime</type>
</CustomField>