force-app/main/default/objects/Accounting_Process__c/fields/Last_Generated_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated_Payroll_Date__c</fullName>
    <label>Last Generated Payroll Date</label>
    <type>Date</type>
</CustomField>