force-app/main/default/objects/Accounting_Process__c/fields/Last_Status_Est_tax__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Est_tax__c</fullName>
    <label>Last Status (Est tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>