force-app/main/default/objects/Accounting_Process__c/fields/Last_Status_Tax__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Tax__c</fullName>
    <label>Last Status (Tax Prep)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>