force-app/main/default/objects/Accounting_Process__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounting Processes</relationshipLabel>
    <relationshipName>Accounting_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>