force-app/main/default/objects/Accounting_Process__c/fields/Line_of_Credit_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit_Accounts__c</fullName>
    <label>Line of Credit Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>