force-app/main/default/objects/Accounting_Process__c/fields/Login_Password__c.field-meta.xml
<CustomField>
    <fullName>Login_Password__c</fullName>
    <label>Login Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>