force-app/main/default/objects/Accounting_Process__c/fields/Login_UserName__c.field-meta.xml
<CustomField>
    <fullName>Login_UserName__c</fullName>
    <label>Login UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>