force-app/main/default/objects/Accounting_Process__c/fields/M2_Bookkeeping_status__c.field-meta.xml
<CustomField>
    <fullName>M2_Bookkeeping_status__c</fullName>
    <label>M2 Bookkeeping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>No Info- Biz. account not linked</fullName>
            </value>
            <value>
                <fullName>Bank Syncing Issue</fullName>
            </value>
            <value>
                <fullName>Additional info requested</fullName>
            </value>
            <value>
                <fullName>Transactions Categorized</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Corrections Needed</fullName>
            </value>
            <value>
                <fullName>Correction Addressed</fullName>
            </value>
            <value>
                <fullName>To Be Posted</fullName>
            </value>
            <value>
                <fullName>Completed - no activity</fullName>
            </value>
            <value>
                <fullName>Completed - f-s uploaded</fullName>
            </value>
            <value>
                <fullName>15th Report Sent - Completed</fullName>
            </value>
            <value>
                <fullName>15th Report Sent - Additional Info Needed</fullName>
            </value>
            <value>
                <fullName>15th Report Sent - Bank Sync Issue</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>