force-app/main/default/objects/Accounting_Process__c/fields/Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Email</label>
    <type>Checkbox</type>
</CustomField>