force-app/main/default/objects/Accounting_Process__c/fields/Mid_Year_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year_Review_Status__c</fullName>
    <label>Tax Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Info In</fullName>
            </value>
            <value>
                <fullName>Appointment Held</fullName>
            </value>
            <value>
                <fullName>Tax Return Received</fullName>
            </value>
            <value>
                <fullName>Prior Tax Return Entered</fullName>
            </value>
            <value>
                <fullName>Zero Tax Plan Generated</fullName>
            </value>
            <value>
                <fullName>Tax Plan Generated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed - No Response</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>