force-app/main/default/objects/Accounting_Process__c/fields/Mileage_Log__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Log__c</fullName>
    <label>Mileage Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>