force-app/main/default/objects/Accounting_Process__c/fields/Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Team__c</fullName>
    <formula>Contact__r.Mitel_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitel Team</label>
    <type>Text</type>
</CustomField>