force-app/main/default/objects/Accounting_Process__c/fields/MONTH__c.field-meta.xml
<CustomField>
    <fullName>MONTH__c</fullName>
    <formula>MONTH(VTO_submitted_Day__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>