force-app/main/default/objects/Accounting_Process__c/fields/New_Activities_this_year_3__c.field-meta.xml
<CustomField>
    <fullName>New_Activities_this_year_3__c</fullName>
    <label>New Activities this year (3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>