force-app/main/default/objects/Accounting_Process__c/fields/New_Company__c.field-meta.xml
<CustomField>
    <fullName>New_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Company</label>
    <type>Checkbox</type>
</CustomField>