force-app/main/default/objects/Accounting_Process__c/fields/Notated_Reviewer_Only_AZ__c.field-meta.xml
<CustomField>
    <fullName>Notated_Reviewer_Only_AZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notated - Reviewer Only - AZ</label>
    <type>Checkbox</type>
</CustomField>