force-app/main/default/objects/Accounting_Process__c/fields/Notated_Reviewer_Only_bkpg__c.field-meta.xml
<CustomField>
    <fullName>Notated_Reviewer_Only_bkpg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notated: Reviewer Only (bkpg)</label>
    <type>Checkbox</type>
</CustomField>