force-app/main/default/objects/Accounting_Process__c/fields/Notated_Reviewer_Only_NY__c.field-meta.xml
<CustomField>
    <fullName>Notated_Reviewer_Only_NY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notated - Reviewer Only -NY</label>
    <type>Checkbox</type>
</CustomField>