force-app/main/default/objects/Accounting_Process__c/fields/Notice_Status__c.field-meta.xml
<CustomField>
    <fullName>Notice_Status__c</fullName>
    <label>Notice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Info In</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Additional info Request Sent</fullName>
            </value>
            <value>
                <fullName>Additional Info Received</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>