force-app/main/default/objects/Accounting_Process__c/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Franchise Return</fullName>
            </value>
            <value>
                <fullName>Franchise Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>