force-app/main/default/objects/Accounting_Process__c/fields/Notify_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Manager</label>
    <type>Checkbox</type>
</CustomField>