force-app/main/default/objects/Accounting_Process__c/fields/Number_of_Bank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bank_Accounts__c</fullName>
    <label>Number of Bank Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>