force-app/main/default/objects/Accounting_Process__c/fields/OLD_Bookkeeping_Status__c.field-meta.xml
<CustomField>
    <fullName>OLD_Bookkeeping_Status__c</fullName>
    <label>OLD Bookkeeping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pre-Prep</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Open Points Awaiting Info</fullName>
            </value>
            <value>
                <fullName>To Be Posted</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Approval</fullName>
            </value>
            <value>
                <fullName>No Info In</fullName>
            </value>
            <value>
                <fullName>Corrections Needed</fullName>
            </value>
            <value>
                <fullName>Corrections Addressed</fullName>
            </value>
            <value>
                <fullName>E-Filed - Awaiting Gov&apos;t Acceptance</fullName>
            </value>
            <value>
                <fullName>Long-Term Pending</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>