force-app/main/default/objects/Accounting_Process__c/fields/Organizer_Received__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Organizer Received</label>
    <type>Checkbox</type>
</CustomField>