force-app/main/default/objects/Accounting_Process__c/fields/Original_Dedicated_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Original_Dedicated_Accountant__c</fullName>
    <formula>Contact__r.Owner.FirstName + &quot; &quot; + Contact__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Dedicated Accountant</label>
    <type>Text</type>
</CustomField>