force-app/main/default/objects/Accounting_Process__c/fields/Outstanding_Payment__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outstanding Payment</label>
    <type>Checkbox</type>
</CustomField>