force-app/main/default/objects/Accounting_Process__c/fields/Owe_Money__c.field-meta.xml
<CustomField>
    <fullName>Owe_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User owes money checkbox in Personal Tax Extension</description>
    <label>Owe Money</label>
    <type>Checkbox</type>
</CustomField>