force-app/main/default/objects/Accounting_Process__c/fields/Paid_BTP__c.field-meta.xml
<CustomField>
    <fullName>Paid_BTP__c</fullName>
    <formula>IF( Account__r.BTP_Paid__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid BTP</label>
    <type>Text</type>
</CustomField>