force-app/main/default/objects/Accounting_Process__c/fields/Paid_Expedited_Fee__c.field-meta.xml
<CustomField>
    <fullName>Paid_Expedited_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Expedited Fee</label>
    <type>Checkbox</type>
</CustomField>