force-app/main/default/objects/Accounting_Process__c/fields/Paypal_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Accounts__c</fullName>
    <label>Paypal Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>