force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes6</relationshipName>
    <type>Lookup</type>
</CustomField>