force-app/main/default/objects/Accounting_Process__c/fields/Payroll_Forms_Received__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Forms_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Forms Received</label>
    <type>Checkbox</type>
</CustomField>